--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "consign": "^0.1.6",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "ip": "^1.1.5"
   }
 }
