terminada documentacao da api, readme e correcao do spinner de areas

--- a/api/apidoc/api_project.json
+++ b/api/apidoc/api_project.json
@@ -1,16 +1,1 @@
-{
-  "version": "1.0.0",
-  "title": "Custom apiDoc browser title",
-  "url": "https://localhost:3000",
-  "name": "API Teste Elo7",
-  "description": "",
-  "sampleUrl": false,
-  "defaultVersion": "0.0.0",
-  "apidoc": "0.3.0",
-  "generator": {
-    "name": "apidoc",
-    "time": "2018-09-17T16:34:57.525Z",
-    "url": "http://apidocjs.com",
-    "version": "0.17.6"
-  }
-}
+{  "version": "1.0.0",  "title": "Custom apiDoc browser title",  "url": "https://localhost:3000",  "name": "api-teste-elo7",  "description": "",  "sampleUrl": false,  "defaultVersion": "0.0.0",  "apidoc": "0.3.0",  "generator": {    "name": "apidoc",    "time": "2018-09-19T22:54:48.545Z",    "url": "http://apidocjs.com",    "version": "0.17.6"  }}
